main.css
@import url("bootstrap-icons.css");

:root {
    --lw: 10vw;
}

html {
    font-size: min(4vw, 26px);
}

* {
    transition: all .3s ease-out;
    transition: transform .8s ease-out;
    box-sizing: border-box;
}

body {
    font-family: sans-serif;
    display: flex;
    justify-content: center;
    flex-direction: column;
    font-weight: 900;
    color: #444;
    background-color: beige;
}

#menu {
    align-self: center;
    width: auto;
}

#letters_div {
    align-self: center;
    font-size: calc(var(--lw)/2);
    margin-top: 10vh;

}

#letters_div {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 75vmin;
}

.letter {
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
    width: var(--lw);
    height: var(--lw);
    margin: 1vw;
    border: 0.5vmin dashed #555;
    overflow: hidden;
    cursor: pointer;
    border-radius: 50%;
    position: absolute;

}

.selected {
    background-color: hsl(140 100% 40%);
    border: 0;
}

.past-selected {
    background-color: hsl(140 50% 40%);
    border: 0;
}

.hidden {
    opacity: 0;
}

.winner {
    background-color: goldenrod;
    transition: all 0.5s cubic-bezier(0.5, -0.5, 0.5, 2);
    border: 0;
    box-shadow: 0px 0px calc(var(--lw)/5) 0px gold;
    transition: all .5s ease-out;
    border-radius: 5%;
}

.effect {
    background-color: gray;
    transition: all 0.1s cubic-bezier(0.5, -0.5, 0.5, 2);
}

#stats {
    font-size: min(2.5vmax, 18px);
    font-weight: 400;
    position: fixed;
    bottom: 1.5vmax;
    left: 1.5vmax;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(5, 1fr);
    grid-column-gap: 2vmin;
    grid-row-gap: 0.2vmin;
}

#seed {
    font-weight: 400;
    font-size: 2vmax;
    position: fixed;
    bottom: 1.5vmax;
    right: 1.5vmax;
    cursor: pointer;
    color: dodgerblue;
}

#share-url {
    position: absolute;
    top: -1000px;
}


.row4 div {
    height: 18vw;
    width: 18vw;
    font-size: 8vw;
}
.row5 div {
    height: 16vw;
    width: 16vw;
    font-size: 6vw;
}
.row6 div {
    height: 14vw;
    width: 14vw;
    font-size: 6vw;
}
.row7 div {
    height: 12vw;
    width: 12vw;
    font-size: 4vw;
}

.circle4 div {
    height: 28vmin;
    width: 28vmin;
    font-size: 10vmin;
}
.circle5 div {
    height: 24vmin;
    width: 24vmin;
    font-size: 8vmin;
}
.circle6 div {
    height: 20vmin;
    width: 20vmin;
    font-size: 7vmin;
}
.circle7 div {
    height: 18vmin;
    width: 18vmin;
    font-size: 6vmin;
}

.row4 div:nth-child(1) {
    transform: translateX(-30vw);
}
.row4 div:nth-child(2) {
    transform: translateX(-10vw);
}
.row4 div:nth-child(3) {
    transform: translateX(10vw);
}
.row4 div:nth-child(4) {
    transform: translateX(30vw);
}

.circle4 div:nth-child(1) {
    transform: rotate(-90deg) translate(25vmin) rotate(90deg);
}
.circle4 div:nth-child(2) {
    transform: rotate(0deg) translate(25vmin) rotate(0deg);
}
.circle4 div:nth-child(3) {
    transform: rotate(90deg) translate(25vmin) rotate(-90deg);
}
.circle4 div:nth-child(4) {
    transform: rotate(180deg) translate(25vmin) rotate(-180deg);
}

.row5 div:nth-child(1) {
    transform: translateX(-36vw);
}
.row5 div:nth-child(2) {
    transform: translateX(-18vw);
}
.row5 div:nth-child(3) {
    transform: translateX(0vw);
}
.row5 div:nth-child(4) {
    transform: translateX(18vw);
}
.row5 div:nth-child(5) {
    transform: translateX(36vw);
}

.circle5 div:nth-child(1) {
    transform: rotate(-90deg) translate(25vmin) rotate(90deg);
}
.circle5 div:nth-child(2) {
    transform: rotate(-18deg) translate(25vmin) rotate(18deg);
}
.circle5 div:nth-child(3) {
    transform: rotate(54deg) translate(25vmin) rotate(-54deg);
}
.circle5 div:nth-child(4) {
    transform: rotate(126deg) translate(25vmin) rotate(-126deg);
}
.circle5 div:nth-child(5) {
    transform: rotate(198deg) translate(25vmin) rotate(-198deg);
}

.row6 div:nth-child(1) {
    transform: translateX(-40vw);
}
.row6 div:nth-child(2) {
    transform: translateX(-24vw);
}
.row6 div:nth-child(3) {
    transform: translateX(-8vw);
}
.row6 div:nth-child(4) {
    transform: translateX(8vw);
}
.row6 div:nth-child(5) {
    transform: translateX(24vw);
}
.row6 div:nth-child(6) {
    transform: translateX(40vw);
}

.circle6 div:nth-child(1) {
    transform: rotate(-90deg) translate(25vmin) rotate(90deg);
}
.circle6 div:nth-child(2) {
    transform: rotate(-30deg) translate(25vmin) rotate(30deg);
}
.circle6 div:nth-child(3) {
    transform: rotate(30deg) translate(25vmin) rotate(-30deg);
}
.circle6 div:nth-child(4) {
    transform: rotate(90deg) translate(25vmin) rotate(-90deg);
}
.circle6 div:nth-child(5) {
    transform: rotate(150deg) translate(25vmin) rotate(-150deg);
}
.circle6 div:nth-child(6) {
    transform: rotate(210deg) translate(25vmin) rotate(-210deg);
}

.row7 div:nth-child(1) {
    transform: translateX(-40.5vw);
}
.row7 div:nth-child(2) {
    transform: translateX(-27vw);
}
.row7 div:nth-child(3) {
    transform: translateX(-13.5vw);
}
.row7 div:nth-child(4) {
    transform: translateX(0vw);
}
.row7 div:nth-child(5) {
    transform: translateX(13.5vw);
}
.row7 div:nth-child(6) {
    transform: translateX(27vw);
}
.row7 div:nth-child(7) {
    transform: translateX(40.5vw);
}

.circle7 div:nth-child(1) {
    transform: rotate(-90deg) translate(25vmin) rotate(90deg);
}
.circle7 div:nth-child(2) {
    transform: rotate(-38.6deg) translate(25vmin) rotate(38.6deg);
}
.circle7 div:nth-child(3) {
    transform: rotate(12.8deg) translate(25vmin) rotate(-12.8deg);
}
.circle7 div:nth-child(4) {
    transform: rotate(64.2deg) translate(25vmin) rotate(-64.2deg);
}
.circle7 div:nth-child(5) {
    transform: rotate(115.6deg) translate(25vmin) rotate(-115.6deg);
}
.circle7 div:nth-child(6) {
    transform: rotate(167deg) translate(25vmin) rotate(-167deg);
}
.circle7 div:nth-child(7) {
    transform: rotate(218.4deg) translate(25vmin) rotate(-218.4deg);
}

